<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello World!</string>
    <string name="welcome">Welcome To National Library Of Canada!</string>
     <string name="Email">Email</string>
    <string name="password">password</string>
    <string name="buttonlogin">login</string>
    <string name="buttonregister">Register</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
