<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sangeeta.myapplication.Main2Activity"
    tools:showIn="@layout/activity_main2">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_weight="1"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="24sp" />


    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/flag" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_weight="1"
        android:hint="@string/Email" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_weight="1"
        android:hint="@string/password" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/buttonregister" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonlogin"/>
    </LinearLayout>

</LinearLayout>